Minor edit for on_this_page translation.

--- a/i18n/hu.yaml
+++ b/i18n/hu.yaml
@@ -7,7 +7,7 @@
   translation: Tartalomjegyzék
   
 - id: on_this_page
-  translation: Ezen az oldalon
+  translation: Tartalom
   
 - id: back_to_top
   translation: Vissza felülre
