New accomplishment: Copernicus MOOC (en/hu)

--- a/i18n/hu.yaml
+++ b/i18n/hu.yaml
@@ -95,7 +95,7 @@
 # Accomplishments widget
  
 - id: see_certificate
-  translation: Lásd a bizonyítányt
+  translation: Igazolás
 
 # Experience widget
 
